# lv_port_linux_frame_buffer

./: .gitignore  CMakeLists.txt  Makefile  README.md  demo  lv_conf.h  lv_drv_conf.h  main.c
.cache/clangd/index/: AD_touch.c.9CD34AC5A022F5AE.idx  AD_touch.h.EAD54A6E93F51D5A.idx  FT5406EE8.c.04606B4558D05321.idx  FT5406EE8.h.DB7F259CEBF37AC8.idx  GC9A01.c.D0A1E580044E80C5.idx  GC9A01.h.0A0986D047F0E565.idx  ILI9341.c.ABD783D16E2C68AD.idx  ILI9341.h.DC638E32928FE3D2.idx  R61581.c.E541413C0046AA5D.idx  R61581.h.957C3E43B89EEA5E.idx  SHARP_MIP.c.3A8CEB70AC978137.idx  SHARP_MIP.h.AB08C2F5DA848BE6.idx  SSD1963.c.0FE206090C64D797.idx  SSD1963.h.C9EFC7886C64FEA0.idx  ST7565.c.30982CB90EDA1B42.idx  ST7565.h.177AF7F3D786E1C5.idx  UC1610.c.B3C899A018BC0BBC.idx  UC1610.h.FB667A3B05D6BC64.idx  XPT2046.c.DF3CC2BB41DF20A5.idx  XPT2046.h.B44C851CECF385E9.idx  _test_template.c.1786D64419986400.idx  animimg001.c.7309AE20ADB75BF8.idx  animimg002.c.3303DCC9C4C6FC6F.idx  animimg003.c.6E0F9CDBF509E7C3.idx  drm.c.D133C8782A306D45.idx  drm.h.E06E3AFF98A9AF28.idx  evdev.c.8CD9F0A3B7964ED8.idx  evdev.h.CB08098C978A0D8A.idx  fbdev.c.B2C0F59DAA2595A8.idx  fbdev.h.9607DC1C5D1038B7.idx  font_1.c.55C3DFDECE98653E.idx  font_2.c.5950B98CD8AEA43F.idx  font_3.c.9363A6BC175315D3.idx  gifdec.c.F6943E47A935A05A.idx  gifdec.h.4A37698E342B494A.idx  gtkdrv.c.CF706142E20BE53F.idx  gtkdrv.h.D92EDFF87040AF43.idx  img_benchmark_cogwheel_alpha16.c.BB22625F13C2DE90.idx  img_benchmark_cogwheel_argb.c.6F0B7D02FAAA61D6.idx  img_benchmark_cogwheel_chroma_keyed.c.36738DF8B967E8AF.idx  (+585 more)
